--- a/requirements.txt
+++ b/requirements.txt
@@ -1,194 +1,11 @@
-absl-py==1.1.0
-aiofiles==22.1.0
-aioredis==1.3.1
-aniso8601==7.0.0
-asgiref==3.5.2
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==21.4.0
-autobahn==22.6.1
-Automat==20.2.0
-backports.zoneinfo==0.2.1
-cached-property==2.0.1
-cachetools==5.2.0
-certifi==2022.6.15
-cffi==1.15.0
-channels==3.0.4
-channels-redis==3.4.1
-charset-normalizer==2.1.0
-chex==0.1.7
-cloudinary==1.29.0
-colorama==0.4.5
-constantly==15.1.0
-contourpy==1.1.1
-cryptography==37.0.2
-cycler==0.12.1
-daphne==3.0.2
-dataclasses-json==0.6.7
-Deprecated==1.2.13
-distlib==0.3.6
-dj-database-url==0.5.0
-Django==3.1.3
+Django>=4.2,<5.0
+djangorestframework>=3.14.0
+djangorestframework-simplejwt>=5.3.0
+django-cors-headers>=4.3.0
+gunicorn>=21.2.0
+whitenoise>=6.6.0
+dj-database-url>=2.1.0
+psycopg2-binary>=2.9.9
+requests>=2.31.0
 django-cloudinary-storage==0.3.0
-django-cors-headers==3.11.0
-django-extra-fields==3.0.2
-django-filter==21.1
-django-graphql-auth==0.3.16
-django-graphql-jwt==0.3.0
-django-jsonify==0.3.0
-django-mixins==0.0.10
-django-ranged-response==0.2.0
-django-redis==4.12.1
-django-redis-cache==3.0.0
-django-simple-captcha==0.5.17
-django-storages==1.12.3
-djangorestframework==3.13.1
-djangorestframework-simplejwt==5.2.0
-dm-tree==0.1.8
-drf-jwt==1.19.2
-drf-simplejwt==4.4.1
-environs==9.5.0
-etils==1.3.0
-fb-idb==1.1.7
-filelock==3.9.0
-flatbuffers==24.3.25
-flax==0.7.2
-fonttools==4.33.3
-fsspec==2024.6.1
-future==0.18.2
-gast==0.4.0
-google-api-core==2.8.2
-google-auth==2.9.0
-google-auth-oauthlib==0.5.2
-google-cloud-core==2.3.1
-google-cloud-storage==2.4.0
-google-cloud-vision==2.7.3
-google-crc32c==1.3.0
-google-pasta==0.2.0
-google-resumable-media==2.3.3
-googleapis-common-protos==1.56.3
-graphene==2.1.8
-graphene-django==2.13.0
-graphene-file-upload==1.3.0
-graphql-core==2.3.2
-graphql-relay==2.0.1
-grpcio==1.64.1
-grpcio-status==1.44.0
-grpclib==0.4.3
-gunicorn==20.1.0
-h2==4.1.0
-h5py==3.8.0
-hiredis==2.0.0
-hpack==4.0.0
-humanfriendly==10.0
-hyperframe==6.0.1
-hyperlink==21.0.0
-idna==3.4
-image==1.5.33
-imageio==2.16.1
-importlib-metadata==4.12.0
-importlib_resources==6.4.0
-imutils==0.5.4
-incremental==21.3.0
-iso8601==1.0.2
-itsdangerous==2.1.2
-jax==0.4.13
-jaxlib==0.4.13
-Jinja2==3.1.2
-keras==2.13.1
-kiwisolver==1.4.5
-legacy==0.1.6
-libclang==18.1.1
-Markdown==3.3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.1
-marshmallow==3.21.3
-matplotlib==3.7.5
-mdurl==0.1.2
-mediapipe==0.10.11
-ml-dtypes==0.2.0
-mpmath==1.3.0
-msgpack==1.0.4
-multidict==6.0.2
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==2.6.3
-numpy==1.23.0
-oauthlib==3.2.0
-opencv-contrib-python==4.10.0.84
-opencv-python==4.6.0.66
-opt-einsum==3.3.0
-optax==0.1.8
-orbax-checkpoint==0.2.3
-packaging==23.2
-pandas==2.0.3
-Pillow==9.2.0
-platformdirs==3.0.0
-promise==2.3
-proto-plus==1.20.3
-protobuf==4.25.3
-psycopg2-binary==2.9.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pygltflib==1.16.2
-Pygments==2.19.1
-PyJWT==1.7.1
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-pyreadline3==3.4.1
-pytesseract==0.3.9
-python-dateutil==2.8.2
 python-dotenv==0.20.0
-pytz==2022.1
-PyWavelets==1.2.0
-PyYAML==6.0.2
-redis==3.5.3
-redis-tools==0.0.2
-requests==2.28.1
-requests-oauthlib==1.3.1
-rich==13.9.4
-rsa==4.8
-Rx==1.6.3
-scikit-image==0.19.2
-scipy==1.8.0
-service-identity==21.1.0
-singledispatch==3.7.0
-six==1.16.0
-sounddevice==0.4.7
-sqlparse==0.4.2
-stripe==4.1.0
-sympy==1.13.0
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow==2.13.0
-tensorflow-decision-forests==1.5.0
-tensorflow-estimator==2.13.0
-tensorflow-hub==0.16.1
-tensorflow-macos==2.13.0
-tensorflowjs==4.22.0
-tensorstore==0.1.45
-termcolor==1.1.0
-text-unidecode==1.3
-tf-keras==2.15.0
-tifffile==2022.2.9
-toolz==1.0.0
-torch==2.3.1
-treelib==1.6.1
-twilio==6.63.2
-Twisted==22.10.0
-txaio==22.2.1
-typing-inspect==0.9.0
-typing_extensions==4.5.0
-tzdata==2025.1
-Unidecode==1.3.4
-urllib3==1.26.9
-virtualenv==20.19.0
-websockets==10.3
-Werkzeug==2.1.2
-whitenoise==6.2.0
-wrapt==1.14.1
-wurlitzer==3.1.1
-yarl==1.7.2
-zipp==3.8.0
-zope.interface==5.4.0
