--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ djangorestframework-simplejwt>=5.3.0
 django-cors-headers>=4.3.0
 gunicorn>=21.2.0
 whitenoise>=6.6.0
-dj-database-url>=2.1.0
+dj-database-url>=2.1.0,<3.0
 psycopg2-binary>=2.9.9
 requests>=2.31.0
 django-cloudinary-storage==0.3.0
